[project]
name = "arxindle"
version = "0.1.0"
description = "Convert ArXiv papers to Kindle-friendly PDFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.26.0",
]

[project.scripts]
arxindle = "arxindle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # E/F = pyflakes/pycodestyle, I = isort

[tool.ruff.lint.isort]
known-first-party = ["arxindle"]
